--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Vamshi Vardhan</title>
   </head>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1964688092573721"
+     crossorigin="anonymous"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
